Email confirmation implemented.
