# src/docs/swagger.json
@@ -65,6 +65,27 @@
         }
       }
     },
+    "/api/v1/auth/confirm_email/{confirmEmailToken}": {
+      "post": {
+        "tags": [
+          "Auth"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "confirmEmailToken",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
     "/api/v1/auth/forgot_password": {
       "post": {
         "tags": [
